plugins {
    id 'com.android.library'
}

ext.libraryName = "GodotGooglePlayBilling"
ext.libraryVersionCode = 1
ext.libraryVersionName = "6.2.1"

android {
    namespace 'com.magikelle.godotgoogleplaybilling'
    compileSdk 34

    defaultConfig {
        minSdk 21
        targetSdk 34
        versionCode libraryVersionCode
        versionName libraryVersionName
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    libraryVariants.all { variant ->
        variant.outputs.all {
            outputFileName = "$libraryName-$libraryVersionName-${variant.name}.aar"
        }

    }
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.android.billingclient:billing:6.2.1'
    compileOnly 'org.godotengine:godot:3.5.2.stable'
}